# apue

./: .clang  .gitignore  CMakeLists.txt  Makefile  apue.h  bochsout.txt  bx_enh_dbg.ini  log.txt  main.cpp  my_head.h  pipe.drawio  process.drawio  test  test.c  wordy
OS/: 虚拟内存.drawio
Testing/: color.html
args/: arg.c  getopt.c  print_error.c  sprintf.c  test_stdargs.c
asm/: asm.img  assembly.asm  assembly.i64  bochsout.txt  bx.asm  bx_enh_dbg.ini  cpuid.s  cpuid2  cpuid2.s  div.asm  div.lst  div2.lst  ds.s  ida.asm  log.txt  loop.asm  test.asm
asm/gas/: gas.sh  gasc.sh  mstore.s  prog
asm/gas/ch04/: -g  basic_sample.asm  print_cpuid.s  print_cpuid_c  print_cpuid_c.s  s
asm/gas/ch05/: a.out  cmovtest  cmovtest.s  movtest1.s  movtest2  program  s  sizetest1.s  sizetest2  sizetest2.s  sizetest3.s
asm/gas/ch06/: calltest  calltest.s  jumptest.s
asm/gas/ch07/: bcdtest.s  convtest.s  floattest.s  fpuals.s  inttest.s  mmxtest.s  movsxtest.s  movsxtest2.s  movzxtest.s  quadtest.s  sse2float.s  ssefloat.s  ssetest.s
asm/gas/ch08/: adctest.s  addtest.s  addtest2.s  addtest3.s  addtest4.s  testprintf.s
asm/masm/: FIRST.MAP  bochsout.txt  first.asm  freedos_bochsrc  loop.asm  snapshot.txt  t1.asm  test  test.c  test.s
asm/masm/ch05/: question5_2.asm  qusttion5_3.asm
asm/masm/ch06/: exp5_1.asm  exp5_2.asm  exp5_5.asm  exp5_6.asm  qustion6_1.asm  qustion6_3.asm
asm/masm/ch07/: and_or.asm  code7_1 copy.asm  code7_1.asm  code7_6.asm  code7_6_practice.asm  code_7.5.asm  code_7_10.asm  question7_7_by_jmp.asm  question7_7_by_reg.asm  question_7_2 practice.asm  question_7_2.asm  unix_fork.asm
asm/masm/ch09/: code9_3.asm  question9_1.asm
asm/masm/ch10/: code10_demo1.asm
asm/masm/samples/: show_pic.asm  show_text.asm
asm/nasm/: asm.drawio  assembly.lst  bochsout.txt  bx.lst  bx_enh_dbg.ini  casm.sh  cpuid.s  debug.cfg  div2.asm  loop.lst  t.asm
cmake_demo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello.c  hello_cmake
error/: errno.c
file/: access  access.c  addaword.c  addawordwordy  chmod  chmod.c  copyfile.c  count.c  file1  fileUtils.c  file_type  file_type.c  ls  ls.c  myls.c  open  open.c  reducto.c  stuct_stat.c  test.cpp  test.txt.red  test_fopen.c  test_fputs_fwrite_fprintf.c  test_fseek.c  test_fwrite.c  type.txt  umask  umask.c
header/: hello  hello.c  maroc_agrs.c  morac_##.c  morac_#.c  preproc.c
io/: a.out  copy  copy.c  creat  creat.c  create_hole.c  dup.c  echo.c  fcntl.c  file.hole  file_struct.c  io.drawio  line_buf  line_buf.c  lseek  lseek.c  lseek2  lseek2.c  open  open.c  printf.c  write.c
ipc/: halp_duplex_pipe  ipc_ctl.c  ipc_perm.c  unpipc.h
ipc/mq/: mq  mq.c
ipc/pipe/: call_pipe.c  halp_duplex_pipe.c  ipc_ctl.c  mainpipe.c  my_write.c  wrapunix.c  write.c
memery/: create_array.c  malloc.c  v_mem.drawio
mylinux/: bochsout.txt  boot.asm
process/: a.out  atexit  atexit.c  atexit_man.c  echoarg.c  echoargs.c  echoenv.c  evn  evn.c  exec.c  exit  exit.c  fork  fork.c  goto.c  malloc.c  process1  process1.c  process_time  process_time.c  race_condition.c  resource_limit.c  set_uid.c  setjmp.c  test.c  test.cpp  testinterp.c  wait  wait.c
reg/: reg  reg.c
signal/: alarm.c  sigcld.c  signal  signal.c  signal2  signal_set.c  signal_test.c
string/: longstrg  longstrg.c  praise1.c  praise2.c  printout.c  puts_gets  puts_gets.c  string1.c
system/: system.c
thread/: create_thread.c  create_threate  thread_exit  thread_exit.c  thread_exit_errway  thread_exit_errway.c
tlpi/: tlpi.h
tlpi/memery/: free_and_sbrk.c
type/: Makefile  program  program1.c  program2.c
unix_standard/: cpu_mem_info.c  path  path_alloc  path_alloc.c  print_sysconf.c  sysconf
